bug: 37683
Change 156873 by jhahm@jhahm-mac on 2009/05/05 23:51:56

        bug: 37683

        Cleaned up the API to the memcached client object.  There is now a 
        MemcachedMap class to make it easy to access memcached with a simple 
        map-like interface.

        Changed default timeout from 1 second to 10 seconds.  The timeout 
        should be long enough to span GC pauses on a fairly loaded server.  
        Sysadmin can still customize the timeout in server config.

http://bugzilla.zimbra.com/show_bug.cgi?id=37683

Copied from Perforce
 Change: 156884