@@ -1,7 +1,8 @@
 /*
  * ***** BEGIN LICENSE BLOCK *****
+ * 
  * Zimbra Collaboration Suite Server
- * Copyright (C) 2005, 2006, 2007, 2008, 2009 Zimbra, Inc.
+ * Copyright (C) 2005, 2006, 2007 Zimbra, Inc.
  * 
  * The contents of this file are subject to the Yahoo! Public License
  * Version 1.0 ("License"); you may not use this file except in
@@ -10,12 +11,11 @@
  * 
  * Software distributed under the License is distributed on an "AS IS"
  * basis, WITHOUT WARRANTY OF ANY KIND, either express or implied.
+ * 
  * ***** END LICENSE BLOCK *****
  */
 
 package com.zimbra.common.localconfig;
-
-import java.io.File;
 
 import com.zimbra.common.util.Constants;
 
@@ -152,6 +152,7 @@ public class LC {
     public static final KnownKey zimbra_converter_enabled_uuencode;
     public static final KnownKey zimbra_converter_enabled_tnef;
     public static final KnownKey zimbra_converter_depth_max;
+    public static final KnownKey convertd_version;
 
     public static final KnownKey zimbra_ssl_enabled;
     
@@ -160,6 +161,7 @@ public class LC {
     public static final KnownKey soap_max_in_memory_buffer_size;
 
     public static final KnownKey ldap_host;
+    public static final KnownKey ldap_log_level;
     public static final KnownKey ldap_port;
     public static final KnownKey ldap_url;
     public static final KnownKey ldap_master_url;
@@ -179,27 +181,9 @@ public class LC {
     public static final KnownKey ldap_postfix_password;
     public static final KnownKey ldap_amavis_password;
     public static final KnownKey ldap_nginx_password;
+    public static final KnownKey ldap_require_tls;
     public static final KnownKey ldap_starttls_supported;
-    public static final KnownKey ldap_common_loglevel;
-    public static final KnownKey ldap_common_require_tls;
-    public static final KnownKey ldap_common_threads;
-    public static final KnownKey ldap_common_toolthreads;
-    public static final KnownKey ldap_db_cachefree;
-    public static final KnownKey ldap_db_cachesize;
-    public static final KnownKey ldap_db_checkpoint;
-    public static final KnownKey ldap_db_dncachesize;
-    public static final KnownKey ldap_db_idlcachesize;
-    public static final KnownKey ldap_db_shmkey;
-    public static final KnownKey ldap_accesslog_cachefree;
-    public static final KnownKey ldap_accesslog_cachesize;
-    public static final KnownKey ldap_accesslog_checkpoint;
-    public static final KnownKey ldap_accesslog_dncachesize;
-    public static final KnownKey ldap_accesslog_idlcachesize;
-    public static final KnownKey ldap_accesslog_shmkey;
-    public static final KnownKey ldap_overlay_syncprov_checkpoint;
-    public static final KnownKey ldap_overlay_syncprov_sessionlog;
-    public static final KnownKey ldap_overlay_accesslog_logpurge;
-
+    
 
     public static final KnownKey ldap_cache_account_maxsize;
     public static final KnownKey ldap_cache_account_maxage;
@@ -209,13 +193,9 @@ public class LC {
     public static final KnownKey ldap_cache_domain_maxage;
     public static final KnownKey ldap_cache_group_maxsize;
     public static final KnownKey ldap_cache_group_maxage;
-    public static final KnownKey ldap_cache_right_maxsize;
-    public static final KnownKey ldap_cache_right_maxage;
     public static final KnownKey ldap_cache_server_maxsize;
     public static final KnownKey ldap_cache_server_maxage;
     public static final KnownKey ldap_cache_timezone_maxsize;
-    public static final KnownKey ldap_cache_xmppcomponent_maxsize;
-    public static final KnownKey ldap_cache_xmppcomponent_maxage;
     public static final KnownKey ldap_cache_zimlet_maxsize;
     public static final KnownKey ldap_cache_zimlet_maxage;
     
@@ -233,10 +213,13 @@ public class LC {
     public static final KnownKey mysql_bind_address;
     public static final KnownKey mysql_port;
     public static final KnownKey mysql_root_password;
+    public static final KnownKey mysql_memory_percent;
+    public static final KnownKey mysql_innodb_log_buffer_size;
+    public static final KnownKey mysql_innodb_log_file_size;
+    public static final KnownKey mysql_sort_buffer_size;
+    public static final KnownKey mysql_read_buffer_size;
+    public static final KnownKey mysql_table_cache;
 
-    public static final KnownKey derby_properties;
-
-    public final static KnownKey logger_data_directory;
     public static final KnownKey logger_mysql_directory;
     public static final KnownKey logger_mysql_data_directory;
     public static final KnownKey logger_mysql_socket;
@@ -249,7 +232,6 @@ public class LC {
 
     public static final KnownKey postfix_alias_maps;
     public static final KnownKey postfix_broken_sasl_auth_clients;
-    public static final KnownKey postfix_bounce_queue_lifetime;
     public static final KnownKey postfix_command_directory;
     public static final KnownKey postfix_daemon_directory;
     public static final KnownKey postfix_enable_smtpd_policyd;
@@ -265,6 +247,7 @@ public class LC {
     public static final KnownKey postfix_newaliases_path;
     public static final KnownKey postfix_policy_time_limit;
     public static final KnownKey postfix_queue_directory;
+    public static final KnownKey postfix_queue_run_delay;
     public static final KnownKey postfix_sender_canonical_maps;
     public static final KnownKey postfix_sendmail_path;
     public static final KnownKey postfix_smtpd_client_restrictions;
@@ -273,7 +256,6 @@ public class LC {
     public static final KnownKey postfix_smtpd_tls_cert_file;
     public static final KnownKey postfix_smtpd_tls_key_file;
     public static final KnownKey postfix_smtpd_tls_loglevel;
-    public static final KnownKey postfix_queue_run_delay;
     public static final KnownKey postfix_transport_maps;
     public static final KnownKey postfix_version;
     public static final KnownKey postfix_virtual_alias_domains;
@@ -312,7 +294,7 @@ public class LC {
     public static final KnownKey calendar_ics_import_full_parse_max_size;
     public static final KnownKey calendar_ics_export_buffer_size;
     public static final KnownKey calendar_max_desc_in_metadata;
-    public static final KnownKey calendar_allow_invite_without_method;
+    public static final KnownKey calendar_canonical_tzid;
     public static final KnownKey calendar_freebusy_max_days;
 
     public static final KnownKey calendar_search_max_days;
@@ -362,7 +344,6 @@ public class LC {
 
     public static final KnownKey zmstat_log_directory;
     public static final KnownKey zmstat_interval;
-    public static final KnownKey zmstat_disk_interval;
     
     public static final KnownKey zimbra_noop_default_timeout;
     public static final KnownKey zimbra_noop_min_timeout;
@@ -385,10 +366,7 @@ public class LC {
     public static final KnownKey zimbra_auth_provider;
     public static final KnownKey zimbra_authtoken_cookie_domain;
     
-    public static final KnownKey zimbra_zmjava_options;
-    public static final KnownKey zimbra_zmjava_java_home;
-    public static final KnownKey zimbra_zmjava_java_library_path;
-    public static final KnownKey zimbra_zmjava_java_ext_dirs;
+    public static final KnownKey debug_update_config_use_old_scheme;
     
     public static final KnownKey debug_xmpp_disable_client_tls;
     
@@ -409,21 +387,12 @@ public class LC {
     public static final KnownKey yauth_baseuri;
     
     public static final KnownKey purge_initial_sleep_time;
-    
-    public static final KnownKey httpclient_connmgr_max_host_connections;
-    public static final KnownKey httpclient_connmgr_max_total_connections;
-    public static final KnownKey httpclient_connmgr_keepalive_connections;
-    public static final KnownKey httpclient_connmgr_retry_count;
-    public static final KnownKey httpclient_connmgr_tcp_nodelay;
-    public static final KnownKey httpclient_connmgr_connection_timeout;
-    public static final KnownKey httpclient_connmgr_so_timeout;
-    // public static final KnownKey httpclient_connmgr_idle_reaper_initial_sleep_time;  don't use this for now
-    public static final KnownKey httpclient_connmgr_idle_reaper_sleep_interval;
-    public static final KnownKey httpclient_connmgr_idle_reaper_connection_timeout;
-    
+
     public static final KnownKey shared_mime_info_globs;
     public static final KnownKey shared_mime_info_magic;
-
+    
+    public static final KnownKey httpclient_idle_connection_timeout;
+    
     public static final KnownKey xmpp_server_tls_enabled;
     public static final KnownKey xmpp_server_dialback_enabled;
     public static final KnownKey xmpp_server_session_allowmultiple;
@@ -475,7 +444,6 @@ public class LC {
     // zmailbox
     public static final KnownKey zmailbox_message_cachesize;
     
-    public static final KnownKey contact_ranking_enabled;
     
     static {
         final String ZM_MYCNF_CAVEAT = "This value is stored here for use by zmmycnf program.  " +
@@ -614,7 +582,7 @@ public class LC {
         zimbra_index_deferred_items_delay = new KnownKey("zimbra_index_deferred_items_delay", "10");
         zimbra_index_deferred_items_failure_delay = new KnownKey("zimbra_index_deferred_items_failure_delay", "300");
         
-        zimbra_index_max_transaction_bytes = new KnownKey("zimbra_index_max_transaction_bytes", "5000000");
+        zimbra_index_max_transaction_bytes = new KnownKey("zimbra_index_max_transaction_bytes", "1000000");
         zimbra_index_max_transaction_items = new KnownKey("zimbra_index_max_transaction_items", "100");
         
         zimbra_index_lucene_autocommit = new KnownKey("zimbra_index_lucene_autocommit", "false");
@@ -670,73 +638,22 @@ public class LC {
 
         zimbra_converter_depth_max = new KnownKey("zimbra_converter_depth_max");
         zimbra_converter_depth_max.setDefault("100");
+
+        convertd_version = new KnownKey("convertd_version");
+        convertd_version.setDefault("1");
         
         zimbra_ssl_enabled = new KnownKey("zimbra_ssl_enabled", "true");
         stats_img_folder = new KnownKey("stats_img_folder");
         stats_img_folder.setDefault("${zimbra_home}" + FS + "logger" + FS + "db" + FS + "work");
 
         soap_max_in_memory_buffer_size = new KnownKey("soap_max_in_memory_buffer_size");
-        soap_max_in_memory_buffer_size.setDefault("524288");  // 512K
+        soap_max_in_memory_buffer_size.setDefault("0");  // disabled by default
         
         ldap_host = new KnownKey("ldap_host");
         ldap_host.setDefault("");
 
-        ldap_common_loglevel = new KnownKey("ldap_common_loglevel");
-        ldap_common_loglevel.setDefault("49152");
-
-        ldap_common_require_tls = new KnownKey("ldap_common_require_tls");
-        ldap_common_require_tls.setDefault("0");
-
-        ldap_common_threads = new KnownKey("ldap_common_threads");
-        ldap_common_threads.setDefault("8");
-
-        ldap_common_toolthreads = new KnownKey("ldap_common_toolthreads");
-        ldap_common_toolthreads.setDefault("1");
-
-        ldap_db_cachefree = new KnownKey("ldap_db_cachefree");
-        ldap_db_cachefree.setDefault("1");
-
-        ldap_db_cachesize = new KnownKey("ldap_db_cachesize");
-        ldap_db_cachesize.setDefault("10000");
-
-        ldap_db_idlcachesize = new KnownKey("ldap_db_idlcachesize");
-        ldap_db_idlcachesize.setDefault("10000");
-
-        ldap_db_dncachesize = new KnownKey("ldap_db_dncachesize");
-        ldap_db_dncachesize.setDefault("20000");
-
-        ldap_db_shmkey = new KnownKey("ldap_db_shmkey");
-        ldap_db_shmkey.setDefault("0");
-
-        ldap_db_checkpoint = new KnownKey("ldap_db_checkpoint");
-        ldap_db_checkpoint.setDefault("64 5");
-
-        ldap_accesslog_cachefree = new KnownKey("ldap_accesslog_cachefree");
-        ldap_accesslog_cachefree.setDefault("1");
-
-        ldap_accesslog_cachesize = new KnownKey("ldap_accesslog_cachesize");
-        ldap_accesslog_cachesize.setDefault("10000");
-
-        ldap_accesslog_idlcachesize = new KnownKey("ldap_accesslog_idlcachesize");
-        ldap_accesslog_idlcachesize.setDefault("10000");
-
-        ldap_accesslog_shmkey = new KnownKey("ldap_accesslog_shmkey");
-        ldap_accesslog_shmkey.setDefault("0");
-
-        ldap_accesslog_dncachesize = new KnownKey("ldap_accesslog_dncachesize");
-        ldap_accesslog_dncachesize.setDefault("20000");
-
-        ldap_accesslog_checkpoint = new KnownKey("ldap_accesslog_checkpoint");
-        ldap_accesslog_checkpoint.setDefault("64 5");
-
-        ldap_overlay_syncprov_checkpoint = new KnownKey("ldap_overlay_syncprov_checkpoint");
-        ldap_overlay_syncprov_checkpoint.setDefault("20 10");
-
-        ldap_overlay_syncprov_sessionlog = new KnownKey("ldap_overlay_syncprov_sessionlog");
-        ldap_overlay_syncprov_sessionlog.setDefault("500");
-
-        ldap_overlay_accesslog_logpurge = new KnownKey("ldap_overlay_accesslog_logpurge");
-        ldap_overlay_accesslog_logpurge.setDefault("01+00:00  00+04:00");
+        ldap_log_level = new KnownKey("ldap_log_level");
+        ldap_log_level.setDefault("49152");
 
         ldap_port = new KnownKey("ldap_port");
         ldap_port.setDefault("");
@@ -799,6 +716,9 @@ public class LC {
         ldap_starttls_supported = new KnownKey("ldap_starttls_supported"); 
         ldap_starttls_supported.setDefault("0");
 
+        ldap_require_tls = new KnownKey("ldap_require_tls");
+        ldap_require_tls.setDefault("false");
+
         ldap_cache_account_maxsize = new KnownKey("ldap_cache_account_maxsize", "20000");
 
         ldap_cache_account_maxage = new KnownKey("ldap_cache_account_maxage", "15");
@@ -815,19 +735,11 @@ public class LC {
 
         ldap_cache_group_maxage = new KnownKey("ldap_cache_group_maxage", "15");
 
-        ldap_cache_right_maxsize = new KnownKey("ldap_cache_right_maxsize", "100");
-
-        ldap_cache_right_maxage = new KnownKey("ldap_cache_right_maxage", "15");
-        
         ldap_cache_server_maxsize = new KnownKey("ldap_cache_server_maxsize", "100");
 
         ldap_cache_server_maxage = new KnownKey("ldap_cache_server_maxage", "15");
 
         ldap_cache_timezone_maxsize = new KnownKey("ldap_cache_timezone_maxsize", "100");
-        
-        ldap_cache_xmppcomponent_maxsize = new KnownKey("ldap_cache_xmppcomponent_maxsize", "100");
-        
-        ldap_cache_xmppcomponent_maxage = new KnownKey("ldap_cache_xmppcomponent_maxage", "15");
 
         ldap_cache_zimlet_maxsize = new KnownKey("ldap_cache_zimlet_maxsize", "100");
 
@@ -841,6 +753,7 @@ public class LC {
 
         ldap_cache_reverseproxylookup_server_maxage = new KnownKey("ldap_cache_reverseproxylookup_server_maxage", "15");
         
+
         mysql_directory = new KnownKey("mysql_directory");
         mysql_directory.setDefault("${zimbra_home}" + FS + "mysql");
 
@@ -869,15 +782,27 @@ public class LC {
         mysql_root_password.setDefault("zimbra");
         mysql_root_password.setForceToEdit(true);
 
-        derby_properties = new KnownKey("derby_properties");
-        derby_properties.setDefault("${zimbra_home}" + File.separator + "conf" + File.separator + "derby.properties");
+        mysql_memory_percent = new KnownKey("mysql_memory_percent");
+        mysql_memory_percent.setDefault("40");
+
+        mysql_innodb_log_buffer_size = new KnownKey("mysql_innodb_log_buffer_size");
+        mysql_innodb_log_buffer_size.setDefault("8388608");
+
+        mysql_innodb_log_file_size = new KnownKey("mysql_innodb_log_file_size");
+        mysql_innodb_log_file_size.setDefault("104857600");
+
+        mysql_sort_buffer_size = new KnownKey("mysql_sort_buffer_size");
+        mysql_sort_buffer_size.setDefault("1048576");
+
+        mysql_read_buffer_size = new KnownKey("mysql_read_buffer_size");
+        mysql_read_buffer_size.setDefault("1048576");
+
+        mysql_table_cache = new KnownKey("mysql_table_cache");
+        mysql_table_cache.setDefault("500");
 
         zimbra_logger_mysql_password = new KnownKey("zimbra_logger_mysql_password");
         zimbra_logger_mysql_password.setDefault("zimbra");
         zimbra_logger_mysql_password.setForceToEdit(true);
-
-        logger_data_directory = new KnownKey("logger_data_directory");
-        logger_data_directory.setDefault("${zimbra_home}" + FS + "logger" + FS + "db" + FS + "data");
 
         logger_mysql_directory = new KnownKey("logger_mysql_directory");
         logger_mysql_directory.setDefault("${zimbra_home}" + FS + "logger" + FS + "mysql");
@@ -908,9 +833,6 @@ public class LC {
 
         postfix_broken_sasl_auth_clients  = new KnownKey("postfix_broken_sasl_auth_clients");
         postfix_broken_sasl_auth_clients.setDefault("yes");
-
-        postfix_bounce_queue_lifetime  = new KnownKey("postfix_bounce_queue_lifetime");
-        postfix_bounce_queue_lifetime.setDefault("5d");
 
         postfix_command_directory  = new KnownKey("postfix_command_directory");
         postfix_command_directory.setDefault("${zimbra_home}" + FS + "postfix" + FS + "sbin");
@@ -1012,7 +934,7 @@ public class LC {
         mailboxd_java_heap_memory_percent.setDefault("30");
 
         mailboxd_java_options = new KnownKey("mailboxd_java_options");
-        mailboxd_java_options.setDefault("-client -XX:NewRatio=2 -Djava.awt.headless=true -XX:MaxPermSize=128m -XX:SoftRefLRUPolicyMSPerMB=1 -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintGCApplicationStoppedTime");
+        mailboxd_java_options.setDefault("-client -XX:NewRatio=2 -Djava.awt.headless=true -XX:MaxPermSize=128m -XX:SoftRefLRUPolicyMSPerMB=1");
 
         mailboxd_java_home = new KnownKey("mailboxd_java_home");
         mailboxd_java_home.setDefault("${zimbra_java_home}");
@@ -1085,8 +1007,8 @@ public class LC {
         calendar_max_desc_in_metadata = new KnownKey("calendar_max_desc_in_metadata");
         calendar_max_desc_in_metadata.setDefault("4096");  // 4KB
 
-        calendar_allow_invite_without_method = new KnownKey("calendar_allow_invite_without_method");
-        calendar_allow_invite_without_method.setDefault("false");
+        calendar_canonical_tzid = new KnownKey("calendar_canonical_tzid");
+        calendar_canonical_tzid.setDefault("windows");
 
         calendar_freebusy_max_days = new KnownKey("calendar_freebusy_max_days");
         calendar_freebusy_max_days.setDefault("366");
@@ -1169,7 +1091,7 @@ public class LC {
         debug_mailboxindex_use_new_locking.setDefault("true");
 
         zimbra_class_provisioning = new KnownKey("zimbra_class_provisioning", "com.zimbra.cs.account.ldap.LdapProvisioning");
-        zimbra_class_accessmanager = new KnownKey("zimbra_class_accessmanager", "com.zimbra.cs.account.accesscontrol.ACLAccessManager");
+        zimbra_class_accessmanager = new KnownKey("zimbra_class_accessmanager", "com.zimbra.cs.account.accesscontrol.AclAccessManager");
         zimbra_class_mboxmanager = new KnownKey("zimbra_class_mboxmanager", "com.zimbra.cs.mailbox.MailboxManager");
         zimbra_class_database = new KnownKey("zimbra_class_database", "com.zimbra.cs.db.MySQL");
         zimbra_class_application = new KnownKey("zimbra_class_application", "com.zimbra.cs.util.ZimbraApplication");
@@ -1194,9 +1116,6 @@ public class LC {
 
         zmstat_interval = new KnownKey("zmstat_interval");
         zmstat_interval.setDefault("30");
-        
-        zmstat_disk_interval = new KnownKey("zmstat_disk_interval");
-        zmstat_disk_interval.setDefault("600");
 
         zimbra_noop_default_timeout = new KnownKey("zimbra_noop_default_timeout", "300");
         zimbra_noop_min_timeout = new KnownKey("zimbra_noop_min_timeout", "30");
@@ -1222,11 +1141,9 @@ public class LC {
         zimbra_authtoken_cookie_domain = new KnownKey("zimbra_authtoken_cookie_domain");
         zimbra_authtoken_cookie_domain.setDefault("");
         
-        zimbra_zmjava_options = new KnownKey("zimbra_zmjava_options", "-Xmx256m");
-        zimbra_zmjava_java_home = new KnownKey("zimbra_zmjava_java_home", "");
-        zimbra_zmjava_java_library_path = new KnownKey("zimbra_zmjava_java_library_path", "");
-        zimbra_zmjava_java_ext_dirs = new KnownKey("zimbra_zmjava_java_ext_dirs", "");
-        
+        debug_update_config_use_old_scheme = new KnownKey("debug_update_config_use_old_scheme");
+        debug_update_config_use_old_scheme.setDefault("false");
+
         debug_xmpp_disable_client_tls = new KnownKey("debug_xmpp_disable_client_tls", "0");
         
         im_dnsutil_dnsoverride = new KnownKey("im_dnsutil_dnsoverride", "");
@@ -1241,10 +1158,10 @@ public class LC {
         javamail_smtp_debug.setDefault("false");
 
         javamail_pop3_timeout = new KnownKey("javamail_pop3_timeout");
-        javamail_pop3_timeout.setDefault("20");
+        javamail_pop3_timeout.setDefault("60");
                                                  
         javamail_imap_timeout = new KnownKey("javamail_imap_timeout");
-        javamail_imap_timeout.setDefault("20");
+        javamail_imap_timeout.setDefault("60");
         
         javamail_smtp_timeout = new KnownKey("javamail_smtp_timeout");
         javamail_smtp_timeout.setDefault("60");
@@ -1266,60 +1183,12 @@ public class LC {
             "purge_initial_sleep_ms", Long.toString(30 * Constants.MILLIS_PER_MINUTE),
             "Amount of time (in milliseconds) that the purge thread sleeps on startup before doing work.");
         
-        httpclient_connmgr_max_host_connections = new KnownKey(
-                "httpclient_connmgr_max_host_connections", 
-                "30",
-                "httpclient connection manager: " + 
-                "Defines the maximum number of connections allowed per host configuration");
-        
-        httpclient_connmgr_max_total_connections = new KnownKey(
-                "httpclient_connmgr_max_total_connections", 
-                "50",
-                "httpclient connection manager: " +
-                "Defines the maximum number of connections allowed overall");
-
-        httpclient_connmgr_keepalive_connections = new KnownKey(
-                "httpclient_connmgr_keepalive_connections", 
-                "true",
-                "httpclient connection manager: " +
-                "Defines whether HTTP keep-alive connections should be used");
-
-        httpclient_connmgr_retry_count = new KnownKey(
-                "httpclient_connmgr_retry_count", 
-                "2",
-                "httpclient connection manager: " +
-                "Defines the number retries after a temporary failure");
-
-        httpclient_connmgr_tcp_nodelay = new KnownKey(
-                "httpclient_connmgr_tcp_nodelay", 
-                "false",
-                "httpclient connection manager: " +
-                "Defines whether to disable Nagle algorithm on HTTP socket");
-
-        httpclient_connmgr_connection_timeout = new KnownKey(
-                "httpclient_connmgr_connection_timeout", 
-                Long.toString(25 * Constants.MILLIS_PER_SECOND),
-                "httpclient connection manager: " +
-                "Determines the timeout until a connection is established. A value of zero means the timeout is not used");
-        
-        httpclient_connmgr_so_timeout = new KnownKey(
-                "httpclient_connmgr_so_timeout", 
-                Long.toString(60 * Constants.MILLIS_PER_SECOND),
-                "httpclient connection manager: " +
-                "A timeout value of zero is interpreted as an infinite timeout. This value is used when no socket timeout is set in the HTTP method parameters");
-
-        httpclient_connmgr_idle_reaper_sleep_interval = new KnownKey(
-                "httpclient_connmgr_idle_reaper_sleep_interval", 
-                Long.toString(5 * Constants.MILLIS_PER_MINUTE),
-                "httpclient connection manager idle reaper: " +
-                "Amount of time (in milliseconds) that the http client connection manager idle connection reaper thread sleeps between doing work. " +
-                "0 means that reaper thread is disabled");
-        
-        httpclient_connmgr_idle_reaper_connection_timeout = new KnownKey(
-                "httpclient_connmgr_idle_reaper_connection_timeout", 
-                Long.toString(5 * Constants.MILLIS_PER_MINUTE),
-                "httpclient connection manager idle reaper: " +
-                "the timeout value to use when testing for idle connections.");
+        httpclient_idle_connection_timeout = new KnownKey(
+                "httpclient_idle_connection_timeout", 
+                "0",
+                "the minimum idle time, in milliseconds, for the connection used by a SoapHttpTransport to be closed. " +
+                "if set to 0, the connection is always closed after each http method invocation, " + 
+                "if set to -1, the connection will not be explicit closed, it could be closed by finalizer, which should not be relied on.");
         
         shared_mime_info_globs = new KnownKey("shared_mime_info_globs",
             "${zimbra_home}" + FS + "conf" + FS + "globs2",
@@ -1384,9 +1253,10 @@ public class LC {
         
         xmpp_dns_override = new KnownKey("xmpp_dns_override", "", "Override DNS for XMPP server, comma-separated list of entries of the form \"{domain:hostname:port}\"");         
         
+        
         zmailbox_message_cachesize = new KnownKey("zmailbox_message_cachesize", "1", "max number of messages cached in zmailbox");
               
-        contact_ranking_enabled = new KnownKey("contact_ranking_enabled", "true", "Enable contact ranking table");
+        
         
 		// NOTE: When adding a new KnownKey, you do not need to call
 		//       setDoc. The documentation string will come from the
